Like button working on AllPostsList.js only

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 		<div id="root"></div>
 		<script
 			src="https://kit.fontawesome.com/8aed1c97ce.js"
-			crossorigin="anonymous"></script>
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
